Updates to coho chapter discussion

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -514,29 +514,66 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the rapid multidimensional scanning tool in in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on $S_{gen}$ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to $S_{gen}$ from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
+We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the rapid multidimensional scanning tool in in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on $S_{gen}$ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to $S_{gen}$ from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
-Comparison of SMU status estimates over time for all  LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (Prop: Scanner-Ricker, Abund: Logistic: Sgen-Ricker, and Abund: Proj: Sgen-Ricker; the first group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that estimated LRP breaches coincided with low points in the aggregate abundance time series (2005 - 2006 and 2015-2017).  However, there were differences in which years different methods estimated SMU status below the LRP. Among the Sgen-Ricker CU options, the LRP was only breached in years 2015-2017 under the Prop: Scanner-Ricker method. Both of the aggregate abundance-based methods estimated status to remain above the LRP over this period. This result is due to the Prop method using the rapid multidimensional scanning tool to assess CU status rather than a direct comparison of CU-level abundance to $S_gen$. The decision tree for the rapid scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.   
+In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2006 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Abund: Logistic: Sgen-Ricker; Abund: Logistic: IFCRT).  
 
-In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. The drop below the LRP in this year was due to declines in aggregate SMU abundance that were driven more by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates) than the smaller Fraser Canyon CU. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Proportional LRP. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method tiggered an LRP breach. The 'Abund: Logistic: Sgen-Ricker' LRP method resulted in SMU status estimates above the LRP in all years.
+Comparison of SMU status estimates over time for all  LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (Prop: Scanner-Ricker, Abund: Logistic: Sgen-Ricker, and Abund: Proj: Sgen-Ricker; the first group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Scanner-Ricker method. Both of the aggregate abundance-based methods estimated status to remain above the LRP over this period. This result is due to the Prop method using the rapid multidimensional scanning tool to assess CU status rather than a direct comparison of CU-level abundance to $S_gen$. The decision tree for the rapid scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  
 
+In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach.  
 
-Both $S_{gen}$ and LRP estimates were higher when the Ricker-priorCap model was used to estimate $S_{gen}$ instead of the base Ricker model, which resulted in more freqeunt LRP breaches for these methods in general (Prop: Scanner-priorCap, Abund: Logistic: Sgen-priorCap, and Abund: Proj: Sgen-priorCap; the second group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)).
+When the Ricker-priorCap model was used to estimate $S_{gen}$ instead of the base Ricker model, both $S_{gen}$ and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (Prop: Scanner-priorCap, Abund: Logistic: Sgen-priorCap, and Abund: Proj: Sgen-priorCap; the second group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)) compared to when the base Ricker model was used.  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 13 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 8 and 7 of the 21 years for the 'Abund: Proj:Sgen-Ricker' and 'Prop: Scanner-priorCap' methods, respectively.  LRP estimates based on the proportional LRPs estimated using the rapid multidimensional scanning tool were therefore the least precautionary of the thee priorCap methods.  
 
+Finally, SMU status remained above the LRP in all years under the Abund: Logistic: IFCRT method.  Because the aggregate abundance-based LRP estimated using this method was similar to that of the Abund: Logistic: Sgen-Ricker (17,515 and 15,395 spawners, respectively), performance for these methods was similar.  In comparison, the aggregate abundance-based LRP estimated using a logistic regression combined with the Ricker-priorCap model (Abund: Logistic: Sgen-priorCap) was higher (25,677 spawners).  
 
-
-Comparison of SMU status estimates over time for all LRP estimation methods that used the Ricker-priorCap model showed that 
-
-
-
-
-
-```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of Sgen benchmarks and aggregate abundance-based LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of Sgen benchmarks and aggregate abundance-based LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
 knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ```
 
 
+## DISCUSSION
 
+(Still in rough note form)
+
+
+Discussion topic 1: What are the unique characteristics of this case study that can inform the development of guidelines
+
+- Data rich SMU; while the number of years of data are limited, full SR time series are available for all 5 CUs.  These have previoulsy been used to develop forward simulations for individual CUs within the SMU.
+- Long history of using aggregate abundance-based recovery targets and fisheries reference points that were developed based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs. As a result, it was well suited to looking at the application of aggregate abundance-based LRPs, as well as how they compared historically to the preferred proportional approach.
+
+
+Discussion topic 2: How well do aggregate abundance-based LRPs perform retrospectively compared to proportional LRPs using the scanner tool?
+
+- The abundance-based methods we considered often matched the proportional methods in a historical comparison of SMU status relative to LRPs. For a given assumption about SR model structure, LRPs tended to be triggered in similar periods of times under the aggregate abudnance-based and proportional options; however, there were some differences.
+- Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportional based ones.  For example, when estimates of Sgen were obtained using the base Ricker model, aggregate abundance-based LRPs were slightly less precautionary than using proprtional estimates using the scanner tool because the scanner tool used additional decision criteria based on minimum levels of absolute CU abundance. However, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher estimates than the Ricker model, aggregate-based abundance LRPs were more precautionary than the proportional method; especially when aggregate abundance-based LRPs were estimated using the Projection-based LRP approach.  In this case, there were years in which aggregate abundance dropped below the LRP, but all CUs remained above red status using the mutli-dimensional tool.
+- Note that we also could have looked at logistic regression-based LRPs in which historical CU status was estimated based on the multi-dimensional decision tool rather than status relative to Sgen. This would have allowed for an evaluation of the relationship between multi-dimensional status and aggregate abundance for Interior Fraser Coho, which would have be useful given the recommendation to use multidimensional status estimates to characterize CU status for proportional LRPs (Holt et al. in review). Future work to support implementation of aggregate abundance-based LRPs should consider this approach when evaluating whether there is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above red status in order to support the development of aggregate-abundance based LRPs.
+<!--
+Question: is there are strong need to estimate logistic regression-based LRPs that characterize CU status based on multi-dimensional status as part of this coho case study? In our current approach, we characterize CU status based simply on abundance relative to Sgen.
+-->
+
+
+Discussion topic 3: Importance of SR model choice in characterizing SMU status in all approaches.
+
+- All methods (with the exception of IFCRT) relied heavily on assessment of CU status relative to Sgen.  This is even true for the Prop methods using the rapid mutlidimensional scanning tool because the decision tree relies heavily on estimates of Sgen when available, which they are for Interior Fraser Coho.
+- As a result, the method used to estimate Sgen had a large impact on results.  Sgen estimates tended to be higher for the Ricker_priorCap model compared to the base Ricker model, which meant that LRPs were more frequently triggered under this formulation.
+- We considered alternative Ricker models for Interior Fraser Coho because previous analyses for this SMU have done so.  Arbeider et al. (2020) used a model averaging approach with 3 SR models equally weighted when assessing recovery potential (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider).
+- Implementation of LRPs when considerable uncertainty in underlying model structure exists will require methods to integrate estimates of LRP status over alternative model structures.  We demonstrate one approach when using projection-based estimates of aggregate abundance-based LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model-average approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible. For example .... (TO DO: reference model selection / averaging papers from Carrie).  In other cases, such at the proportional approach using WSP assessments or the multi-dimensional scanning tool, uncertainty in model structure may best be dealt with through expert opinion.  For example, under the planned expert workshops that will be used to confirm rapid multidimensional status estimates, participants could be given two sets of status results based on two different Sgen models, and then be asked to converge on a single status estimate. (can we pers. comm. Sue Grant as a reference for this process?).  
+
+
+Discussion topic 4: What was learned from retrospective analysis of logistic regression-based methods?
+
+- Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability. 2015 was the first year that that regression-based LRPs could be estimated, indicating that at least 18 years of data were required. (Although, note that the Logistic regression with the Base Ricker model could not estimate an LRP until 2017, so required 20 years of data).  However, slight shifts in Sgen estimates in some years meant that logistic models were sometimes unable to converge on a solution even with more data. 
+- For years in which LRPs could be estimated, LRP estimates did vary over time; especially when Sgen was estimated each year within an integrated modelling framework.  LRP estimates were more stable when CU status was based on the IFCRT recovery target of at least half of all sub-populations within a CU having more than 1000 fish.  This result is likely because estimated CU status in a given historic year were not changing annually in the same way the did in the integrated Sgen-logistic regression model fits.
+- Missing data scenarios, in which 1 or 2 CUs were removed from the data set, highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures' in the data used as inputs to the logistic regression. Estimates of aggregate SMU status, characterized as generational mean escapement / LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status. 
+- Taken together, these retrospective results highlight that caution should be used when applying logistic regression-based LRPs. While they did provide similar estimates of SMU status as proportion-based methods using the rapid multidimesional scanning tool for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data becomes available to improve the statistical power of logistic regression fits.
+
+
+Discussion topic 5: What we learned from sensitivity analysis of projection-based methods?
+
+- Projection-based LRPs were higher, and therefore more precautionary, than logistic regression-based LRPs when forward projections were parameterized using base case parameters.  Given that the estimation of logistic regression-based LRPs were sensitive to data availability, projection-based LRPs may provide more reliable estimates for cases in which population and fishery dynamics can be modelled.
+- Projection-based LRPs also have the advantage of being able to incorporate hypotheses about current population and / or fishery dynamics into forward projections, whereas logistic regression-based LRPs are constrained by conditions that have been previously experienced.
+- The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, it made sense to set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above Sgen given a specified fixed ER policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above Sgen could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix).
+- Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens. Projected LRPs therefore have a built-in buffer that will help avoid the situation where aggregate abundance remains above the LRP despite several CUs having poor realized status.
 
